--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
                         <div class="blog-card alt">
                             <div class="meta">
-                            <div class="photo" style="background-image: url(https://storage.googleapis.com/chydlx/codepen/blog-cards/image-2.jpg)"></div>
+                            <div class="photo" style="background-image: url(/assets/img/Proyecto-chat-app.png)"></div>
                             </div>
                             <div class="description">
                             <h1>Chat App</h1>
@@ -407,11 +407,11 @@
                                     <img src="assets/img/nodejs.png" alt="">
                                 </div>
                             </div>
-                            <div href="#" target="_blank" class="code-demo">
-                                <a class="btnCode-git">
+                            <div  class="code-demo">
+                                <a href="https://github.com/FredoAM/chat-app" target="_blank" class="btnCode-git">
                                     Code GitHub
                                 </a>
-                                <a href="#" target="_blank" class="btnCode-demo">
+                                <a href="https://chat-app-production-5c19.up.railway.app/" target="_blank" class="btnCode-demo">
                                     Demo
                                 </a>
                             </div>
