updating demo urls

--- a/index.html
+++ b/index.html
@@ -220,7 +220,9 @@
                             <p class="project-desc"> 
                                 Movie App displaying movie and tv series information
                                 <br>
-                                Contains login and registration, placing comments and saving favorites 
+                                Contains login and registration, creating comments, updating profile information and saving favorites
+                                <br>
+                                Using MYSQL database 
                             </p>
                             <div class="tech-used">
                                 <div class="tech-img">
@@ -237,7 +239,7 @@
                                 <a href="https://github.com/FredoAM/PHP-REACT-MOVIE-APP" target="_blank" class="btnCode-git">
                                     Code GitHub
                                 </a>
-                                <a href="#" target="_blank" class="btnCode-demo">
+                                <a href="https://php-react-movie-app-production.up.railway.app/" target="_blank" class="btnCode-demo">
                                     Demo
                                 </a>
                             </div>
@@ -254,7 +256,9 @@
                             <p class="project-desc">
                                 Movie App displaying movie and tv series information
                                 <br>
-                                Contains login and registration, placing comments and saving favorites 
+                                Contains login and registration, creating comments, updating profile information and saving favorites
+                                <br>
+                                Using firestore database 
                             </p>
                             <div class="tech-used">
                                 <div class="tech-img">
@@ -271,7 +275,7 @@
                                 <a href="https://github.com/FredoAM/Movie-App-React-Firebase" target="_blank" class="btnCode-git">
                                     Code GitHub
                                 </a>
-                                <a href="https://movies-app-react-2948e.web.app/" target="_blank" class="btnCode-demo">
+                                <a href="#" target="_blank" class="btnCode-demo">
                                     Demo
                                 </a>
                             </div>
@@ -308,7 +312,7 @@
                                 <a href="https://github.com/FredoAM/Ecommerce-Fredo-Shop" target="_blank" class="btnCode-git">
                                     Code GitHub
                                 </a>
-                                <a href="#" target="_blank" class="btnCode-demo">
+                                <a href="https://ecommerce-fredo-shop-production.up.railway.app/" target="_blank" class="btnCode-demo">
                                     Demo
                                 </a>
                             </div>
