--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         </div>
                         <div >
                             <h3 class="resume-title">Download CV</h3>
-                            <a href="/assets/CV.pdf" download="CV.pdf" class="btnCv">Download</a>
+                            <a href="/assets/CV- Alfredo Aranda - Dev web.pdf" download="CV- Alfredo Aranda - Dev web.pdf" class="btnCv">Download</a>
                         </div>
                     </div>
                 </div>
