--- a/index.html
+++ b/index.html
@@ -199,7 +199,14 @@
                               <li>Performing tasks in Data Studio and PowerBi to visualize sales and revenue data by dates or branches, creating user interfaces for better analysis. The database used was BigQuery.</li>
                             </ul>
                           </div>
-                          
+                          <div class="resume-item">
+                            <h4>Web Developer</h4>
+                            <h5>2023 Sept - 2024</h5>
+                            <p><em>GearHead, Monterrey, Nuevo León </em></p>
+                            <ul>
+                              <li>Support in modifications to already existing web pages, using HTML, CSS, React, and GitHub.</li>
+                             </ul>
+                          </div>
                         </div>
                       </div>
               
@@ -239,7 +246,7 @@
                                 <a href="https://github.com/FredoAM/PHP-REACT-MOVIE-APP" target="_blank" class="btnCode-git">
                                     Code GitHub
                                 </a>
-                                <a href="https://php-react-movie-app-production.up.railway.app/" target="_blank" class="btnCode-demo">
+                                <a href="#" target="_blank" class="btnCode-demo">
                                     Demo
                                 </a>
                             </div>
@@ -309,7 +316,7 @@
                                 </div>
                             </div>
                             <div class="code-demo">
-                                <a href="https://github.com/FredoAM/Ecommerce-Fredo-Shop" target="_blank" class="btnCode-git">
+                                <a href="#" target="_blank" class="btnCode-git">
                                     Code GitHub
                                 </a>
                                 <a href="https://ecommerce-fredo-shop-production.up.railway.app/" target="_blank" class="btnCode-demo">
@@ -343,7 +350,7 @@
                                 </div>
                             </div>
                             <div class="code-demo">
-                                <a href="https://github.com/FredoAM/fredoam.todo-list.io" target="_blank" class="btnCode-git">
+                                <a href="#" target="_blank" class="btnCode-git">
                                     Code GitHub
                                 </a>
                                 <a href="https://fredoam.github.io/fredoam.todo-list.io/index.html" target="_blank" class="btnCode-demo">
@@ -412,7 +419,7 @@
                                 </div>
                             </div>
                             <div  class="code-demo">
-                                <a href="https://github.com/FredoAM/chat-app" target="_blank" class="btnCode-git">
+                                <a href="#" target="_blank" class="btnCode-git">
                                     Code GitHub
                                 </a>
                                 <a href="https://chat-app-production-5c19.up.railway.app/" target="_blank" class="btnCode-demo">
